log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-log-output
          emptyDir: {}
#        - name: shared-ping-pong-output
#          persistentVolumeClaim:
#            claimName: ping-pong-claim
      containers:
        - name: log-output-generator
          image: tniemi/dwk-log-output-generator:1.11
          volumeMounts:
            - name: shared-log-output
              mountPath: /app/files
        - name: log-output-server
          image: tniemi/dwk-log-output-server:2.1
          volumeMounts:
            - name: shared-log-output
              mountPath: /app/files
#            - name: shared-ping-pong-output
#              mountPath: /app/pingpong
